--- a/app/src/main/res/layout/custom_dialog_configuration_email_send.xml
+++ b/app/src/main/res/layout/custom_dialog_configuration_email_send.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
+        android:layout_width="330dp"
         android:layout_height="400dp"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -36,8 +35,9 @@
             android:id="@+id/etMailAddress"
             style="@style/commands_emails_fields"
             android:layout_width="160.7dp"
-            android:layout_marginStart="17.3dp"
-            android:ems="10"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:ems="8"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@+id/tvMailAddress"
             app:layout_constraintStart_toEndOf="@+id/tvMailAddress"
@@ -48,7 +48,7 @@
             style="@style/commands_emails_fields"
             android:layout_width="160.7dp"
             android:layout_marginStart="17.3dp"
-            android:ems="10"
+            android:ems="8"
             android:inputType="textPassword"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
@@ -59,8 +59,8 @@
             android:id="@+id/etMailServer"
             style="@style/commands_emails_fields"
             android:layout_width="160.7dp"
-            android:layout_marginStart="17.3dp"
-            android:ems="10"
+            android:layout_marginStart="5dp"
+            android:ems="8"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@+id/tvMailServer"
             app:layout_constraintStart_toEndOf="@+id/tvMailServer"
@@ -71,8 +71,8 @@
             android:id="@+id/etMailServerPort"
             style="@style/commands_emails_fields"
             android:layout_width="160.7dp"
-            android:layout_marginStart="17.3dp"
-            android:ems="10"
+            android:layout_marginStart="5dp"
+            android:ems="8"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@+id/tvMailServerPort"
             app:layout_constraintStart_toEndOf="@+id/tvMailServerPort"
@@ -82,7 +82,6 @@
             android:id="@+id/tvMailAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="48dp"
             android:fontFamily="@font/arialmt"
             android:lineSpacingExtra="-9.9sp"
@@ -91,7 +90,7 @@
             android:textSize="14.7sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.040"
+            app:layout_constraintHorizontal_bias="0.060"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.150" />
