--- a/app/src/main/res/layout/custom_dialog_configuration_send.xml
+++ b/app/src/main/res/layout/custom_dialog_configuration_send.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="300dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -37,9 +37,7 @@
             android:id="@+id/btnSendCommand"
             android:layout_width="90dp"
             android:layout_height="31.7dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
             android:background="@color/green1"
             android:fontFamily="@font/arialmt"
             android:lineSpacingExtra="-9.9sp"
@@ -49,15 +47,17 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18.7sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rgSelects" />
+            app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/btnCancel" />
 
     <Button
             android:id="@+id/btnCancel"
             android:layout_width="90dp"
             android:layout_height="31.7dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@color/red4"
             android:fontFamily="@font/arialmt"
             android:lineSpacingExtra="-9.9sp"
@@ -65,10 +65,25 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18.7sp"
-            app:layout_constraintBottom_toBottomOf="@+id/btnSendCommand"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btnSendCommand" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rgSelects" />
 
+    <!--    <Button-->
+    <!--            android:id="@+id/btnCancel"-->
+    <!--            android:layout_width="90dp"-->
+    <!--            android:layout_height="31.7dp"-->
+    <!--            android:layout_marginEnd="16dp"-->
+    <!--            android:background="@color/red4"-->
+    <!--            android:fontFamily="@font/arialmt"-->
+    <!--            android:lineSpacingExtra="-9.9sp"-->
+    <!--            android:text="@string/cancel"-->
+    <!--            android:textAllCaps="false"-->
+    <!--            android:textColor="@color/white"-->
+    <!--            android:textSize="18.7sp"-->
+    <!--            app:layout_constraintBottom_toBottomOf="@+id/btnSendCommand"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="@+id/btnSendCommand" />-->
 
     <RadioGroup
             android:id="@+id/rgConfigSelects"
@@ -80,7 +95,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.100"
-
+            android:layout_marginStart="16dp"
             >
 
         <RadioButton
